--- a/index.html
+++ b/index.html
@@ -17,93 +17,106 @@
   <body>
 
         <section class= "recent-works">
-          <h3>My Recent Works</h3>
+          <h1>My Recent Works</h1>
 <section class = "cards">
          <div class="card">
-            <img src="./images/img placeholder.png" alt="">
+      <div class="project-img"></div>
+      <div class="text">
             <h3>Mutli post stories</h3>
             <h4>Gain + Glory</h4>
-             <ul class = "tags-tag">
-            <button class="tag">Ruby on Rails</button>
-            <button class="tag">Css</button>
-            <button class="tag">Javascript</button>
-            <button class="tag">Html</button>
-          </ul>
-          <ul class="project">
+             <section class = "tags">
+            <li class="tag">Ruby on Rails</li>
+            <li class="tag">Css</li>
+            <li class="tag">Javascript</li>
+            <li class="tag">Html</li>
+          </section>
+          <section class="project">
         <button class="project">See Project</button>
-        </ul>
+        </section>
+        </div>
          </div>
          <div class="card">
-          <img src="./images/img placeholder.png" alt="">
+         <div class="project-img"></div>
+         <div class="text">
           <h3>Mutli post stories</h2>
           <h4>Gain + Glory</h4>
-           <ul class = "tags-tag">
-            <button class="tag">Ruby on Rails</button>
-            <button class="tag">Css</button>
-            <button class="tag">Javascript</button>
-            <button class="tag">Html</button>
-          </ul>
-          <ul class="project">
+           <section class = "tags">
+            <li class="tag">Ruby on Rails</li>
+            <li class="tag">Css</li>
+            <li class="tag">Javascript</li>
+            <li class="tag">Html</li>
+          </section>
+          <section class="project">
       <button class="project">See Project</button>
-      </ul>
+      </section>
+    </div>
        </div>
        <div class="card">
-        <img src="./images/img placeholder.png" alt="">
+       <div class="project-img"></div>
+       <div class="text">
         <h3>Mutli post stories</h2>
         <h4>Gain + Glory</h4>
-        <ul class = "tags-tag">
-           <button class="tag">Ruby on Rails</button>
-            <button class="tag">Css</button>
-            <button class="tag">Javascript</button>
-            <button class="tag">Html</button>
-          </ul>
-          <ul class="project">
+        <section class = "tags">
+           <li class="tag">Ruby on Rails</li>
+            <li class="tag">Css</li>
+            <li class="tag">Javascript</li>
+            <li class="tag">Html</li>
+          </section>
+          <section class="project">
     <button class="project">See Project</button>
-    </ul>
+    </section>
+  </div>
      </div>
     </section>
     <section class = "cards">
     <div class="card">
-          <img src="./images/img placeholder.png" alt="">
+        <div class="project-img"></div>
+        <div class="text">
           <h3>Mutli post stories</h2>
           <h4>Gain + Glory</h4>
-           <ul class = "tags-tag">
-            <button class="tag">Ruby on Rails</button>
-            <button class="tag">Css</button>
-            <button class="tag">Javascript</button>
-            <button class="tag">Html</button>
-          </ul>
-          <ul class="project">
+           <section class = "tags">
+            <li class="tag">Ruby on Rails</li>
+            <li class="tag">Css</li>
+            <li class="tag">Javascript</li>
+            <li class="tag">Html</li>
+          </section>
+          <section class="project">
       <button class="project">See Project</button>
-      </ul>
+      </section>
+    </div>
        </div>
 <div class="card">
-          <img src="./images/img placeholder.png" alt="">
+         <div class="project-img"></div>
+         <div class="text">
           <h3>Mutli post stories</h2>
           <h4>Gain + Glory</h4>
-           <ul class = "tags-tag">
-           <button class="tag">Ruby on Rails</button>
-            <button class="tag">Css</button>
-            <button class="tag">Javascript</button>
-            <button class="tag">Html</button>
-          </ul>
-          <ul class="project">
+           <section class = "tags">
+           <li class="tag">Ruby on Rails</li>
+            <li class="tag">Css</li>
+            <li class="tag">Javascript</li>
+            <li class="tag">Html</li>
+          </section>
+          <section class="project">
       <button class="project">See Project</button>
-      </ul>
+      </section>
+    </div>
        </div>
        <div class="card">
-          <img src="./images/img placeholder.png" alt="">
+         <div class="project-img"></div>
+         <div class="text">
           <h3>Mutli post stories</h2>
           <h4>Gain + Glory</h4>
-          <ul class = "tags-tag">
-          <button class="tag">Ruby on Rails</button>
-            <button class="tag">Css</button>
-            <button class="tag">Javascript</button>
-            <button class="tag">Html</button>
-          </ul>
-          <ul class="project">
+          <section class = "tags">
+          <li class="tag">Ruby on Rails</li>
+            <li class="tag">Css</li>
+            <li class="tag">Javascript</li>
+            <li class="tag">Html</li>
+          </section>
+          <section class="project">
       <button class="project">See Project</button>
-   </ul> 
+   </section> 
+  </div>
+  </div>
        </div>
       </section>
         </section>
@@ -125,38 +138,48 @@ don’t hestiate to contact me.
          <section class= "grids">
          <div class="grid">
             <img class="grid-image" src="./images/language.png" alt="">
-            <h3>Languages</h3>
-             <ul class = "tags">
-            <button class="tag">Javascript</button>
-            <button class="tag">Ruby</button>
-            <button class="tag">Html</button>
-            <button class="tag">CSS</button>
-          </ul>
+            <div class="txt1">
+            <h3 class="lang-title">Languages</h3>
+             <section class = "tags1">
+            <li class="tag1">Javascript</li>
+            <li class="tag1">Ruby</li>
+            <li class="tag1">Html</li>
+            <li class="tag1">CSS</li>
+          </section>
+          </div>
          </div>
           <div class="grid">
           <img  class="grid-image" src="./images/frameworks.png" alt="">
+          <div class="txt1">
           <h3>Frameworks</h3>
-           <ul class = "tags">
-            <button class="tag">Bootstrap</button>
-            <button class="tag">Ruby on Rails</button>
-            <button class="tag">Rspec</button>
-            <button class="tag">Capybara</button>
-            <button class="tag">Selenium</button>
-          </ul>
+           <div class = "tags1">
+            <li class="tag1">Bootstrap</li>
+            <li class="tag1">Ruby on Rails</li>
+            <li class="tag1">Rspec</li>
+           </div>
+             <div class = "tags2">
+            <li class="tag1">Capybara</li>
+            <li class="tag1">Selenium</li>
+          </div>
         </div>
+          </div>
        <div class="grid">
         <img class="grid-image"src="./images/skills.png" alt="">
+        <div class="txt1">
         <h3>Skills</h3>
-        <ul class = "tags">
-           <button class="tag">Codekit</button>
-            <button class="tag">Github</button>
-            <button class="tag">Codepen</button>
-            <button class="tag">Gitlab</button>
-            <button class="tag">Terminal</button>
-          </ul>
+        <div class = "tags1">
+           <li class="tag1">Codekit</li>
+            <li class="tag1">Github</li>
+            <li class="tag1">Codepen</li>
+            <li class="tag1">Gitlab</li>
+  </div>
+            <div class="tags2">
+            <li class="tag1">Terminal</li>
+            </div>
+          </div>
      </div> 
          </section>
-    
+    <div class="contact">
       <div  class="contact-text">
       <h4>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h4>
      </div>
@@ -166,7 +189,7 @@ don’t hestiate to contact me.
       </div>
     <input class="smallbtn3" type="text" value="Email adress" size="33">
     <textarea class="txt-area">Type something</textarea>
-    <button class="get-in-touch">Get In Touch</button>
+    <li class="get-in-touch">Get In Touch</li>
     </div>
     </section>
     <section class="social-media">
@@ -186,5 +209,6 @@ don’t hestiate to contact me.
     <img src="./images/socialmedia icons/angelist 1.png" alt="angelist icon">
 </a>
         </section>
+        </div>
       </body>
 </html>
