added recent works styling division

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
 
         <section class= "recent-works">
-          <h1>My Recent Works</h1>
+          <h1 class="recents-title">My Recent Works</h1>
 <section class = "cards">
          <div class="card">
       <div class="project-img"></div>
