--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <img class="img2" src="./images/frame4.png">
           </div>
           <div class="content">
-          <h1>About Me</h1>
+          <h1 class="about-title">About Me</h1>
           <p class="support-text">
              I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
 don’t hestiate to contact me.
